[tool.poetry]
name = "pipeless-cli"
version = "0.1.1"
description = "Pipeless is a framework to build and deploy multimodal perception apps in minutes without worrying about multimedia pipelines"
authors = ["Miguel Angel Cabrera Minagorri <devgorri@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage: "pipeless.ai"
repository: "https://github.com/miguelaeh/pipeless"
documentation: "https://github.com/miguelaeh/pipeless"
keywords: "multimedia framework artificial-intelligence pipeline developer-tools"
packages = [{include = "cli"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {version = "^0.9.0", extras = ["all"]}
pyyaml = "^6.0.1"
pipeless = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pipeless = "cli.main:app"
