[tool.poetry]
name = "pipeless-ai-cli"
version = "0.1.15"
description = "An open-source computer vision framework to create and deploy computer vision applications that scale in minutes"
authors = ["Miguel Angel Cabrera Minagorri <devgorri@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://pipeless.ai"
repository = "https://github.com/pipeless-ai/pipeless"
documentation = "https://github.com/pipeless-ai/pipeless"
keywords = ["multimedia", "framework", "artificial-intelligence", "pipeline", "developer-tools", "computer-vision", "image-processing"]

[tool.poetry.dependencies]
python = "^3.10"
typer = {version = "^0.9.0", extras = ["all"]}
pyyaml = "^6.0.1"
pipeless-ai = "^0.1.0"
gitpython = "^3.1.35"
packaging = "^23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pipeless = "pipeless_ai_cli.main:app"
