[tool.poetry]
name = "pupila"
version = "0.1.0"
description = "An open source framework to easily build and deploy production computer vision and multimedia applications in minutes."
authors = ["Miguel Angel Cabrera Minagorri <devgorri@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.4.2"
pulsar-client = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
