[tool.poetry]
name = "pupila"
version = "0.1.0"
description = "An open source framework to easily build and deploy production computer vision and multimedia applications in minutes."
authors = ["Miguel Angel Cabrera Minagorri <devgorri@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.4.2"
pynng = "^0.7.2"
numpy = "^1.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pupila = "pupila.main:main"
