[tool.poetry]
name = "pipeless-ai"
version = "0.1.14"
description = "A framework to build and deploy multimodal perception apps in minutes without worrying about multimedia pipelines"
authors = ["Miguel Angel Cabrera Minagorri <devgorri@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://pipeless.ai"
repository = "https://github.com/miguelaeh/pipeless"
documentation = "https://github.com/miguelaeh/pipeless"
keywords = ["multimedia", "framework", "artificial-intelligence", "pipeline", "developer-tools"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.4.2"
pynng = "^0.7.2"
numpy = "^1.24.0 <1.25.0"
pygobject = "^3.44.1"
opencv-python = "^4.8.0.76"
onnxruntime-gpu = "^1.15.1"
requests = "^2.31.0"
onnx = "^1.14.1"
line-profiler = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
