[package]
name = "pipeless-ai"
version = "1.6.1"
edition = "2021"
authors = ["Miguel A. Cabrera Minagorri"]
description = "An open-source computer vision framework to build and deploy applications in minutes"
documentation = "https://www.pipeless.ai/docs"
readme = "README.md"
homepage = "https://www.pipeless.ai/"
repository = "https://github.com/pipeless-ai/pipeless/"
license = "Apache-2.0"
keywords = ["vision", "image-processing", "image", "video", "machine-learning"]
categories = ["computer-vision", "development-tools", "multimedia", "science"]

# Microsoft does not provide a release for osx-gpu. See: https://github.com/microsoft/onnxruntime/releases
# "gpu" means CUDA or TensorRT EP. Thus, the ort crate cannot download them at build time.
# Ref: https://github.com/pykeio/ort/blob/d7defd1862969b4b44f7f3f4b9c72263690bd67b/build.rs#L148
[target.'cfg(all(not(target_os = "macos"), not(target_os = "ios")))'.dependencies]
ort = { version = "1.16.2", features = ["cuda", "tensorrt", "openvino"] }
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
ort = { version = "1.16.2", features = ["coreml", "openvino"] }

[dependencies]
ndarray = "0.15.4"
pyo3 = { version = "0.20" }
numpy = "0.20"
gstreamer = "0.21.1"
glib = "0.18.2"
log = "0.4.20"
gstreamer-app = "0.21.1"
env_logger = "0.10.0"
tokio = { version = "1.33.0", features = ["full"] }
warp = "0.3.6"
serde_derive = "1.0.189"
serde = "1.0.189"
serde_json = "1.0.107"
tokio-stream = "0.1.14"
futures = "0.3.28"
clap = { version = "4.4.7", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
sled = "0.34.7"
lazy_static = "1.4.0"
rayon = "1.8.0"
num_cpus = "1.16.0"
gstreamer-rtsp = "0.21.0"
inquire = "0.6.2"
tabled = "0.15.0"
ctrlc = "3.4.2"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Allows to generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enable to serialize/deserialize uuids
]
