[tool.poetry]
name = "pipeless-ai-plugins"
version = "0.1.1"
description = "A collection of plugins for the Pipeless framework"
authors = ["Miguel Angel Cabrera Minagorri <devgorri@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://pipeless.ai"
repository = "https://github.com/miguelaeh/pipeless"
documentation = "https://github.com/miguelaeh/pipeless"
keywords = ["multimedia", "framework", "artificial-intelligence", "pipeline", "developer-tools"]

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
